tests/test_assets/semantic/invalid/switch/runtime_case.cog
test::(value, runtime_case: i32) -> i32 {
    switch value {
        case runtime_case:
            return 1;

        default:
            return 0;
    }
}