tests/test_assets/semantic/invalid/switch/runtime_case.expected
semantic error at line 3: expression is not a compile-time constant
1 semantic error generated.
